# portfolio-intelligence

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  analyze_nasdaq100.py  app.py  download_nasdaq100.py  fundamentals_report.py  main.py  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: nasdaq100_prices.csv
docs/: ENTERPRISE.md
src/: analytics.py  cli.py  fundamentals.py  i18n.py  market_data.py  nasdaq100.py  portfolio.py  report.py
src/analytics/: alerts.py  backtest.py  factors.py  insights.py  interpret.py  options.py  performance.py  pipeline.py  simulation.py
src/data/: cache.py  fineco.py  fx.py  importers.py  isin.py  options_chain.py  price_lookup.py  providers.py  rates.py  store.py  validators.py  yahoo_client.py
src/fundamentals/: valuation.py
src/portfolio/: __init__.py  optimization.py  positions.py  returns.py  risk.py
src/ui/: components.py  identity.py  theme.py
tests/: test_alerts_report.py  test_analytics.py  test_backtest.py  test_cli.py  test_correlations.py  test_factors.py  test_fineco.py  test_fundamentals.py  test_fx.py  test_i18n.py  test_importers.py  test_insights.py  test_interpret.py  test_isin.py  test_market_data.py  test_nasdaq100.py  test_optimization.py  test_options.py  test_options_chain.py  test_pdf_report.py  test_performance.py  test_persistence.py  test_pipeline.py  test_portfolio.py  test_positions.py  test_price_lookup.py  test_providers.py  test_rates.py  test_report.py  test_simulation.py  test_store.py
(+17 files in other folders)
